manifests/additional_kube_prometheus_config/legacy/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/auth-url: "https://gate.enigmatic.stanford.edu/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://gate.enigmatic.stanford.edu/oauth2/start?rd=$scheme://$host$escaped_request_uri"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - prometheus.enigmatic.stanford.edu
    secretName: prometheus-tls
  rules:
  - host: prometheus.enigmatic.stanford.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
